fixed positioning on smaller screens

--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,15 @@ body {
 	color: white;
 }
 
+hr {
+	display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0; 
+}
+
  .navbar.transparent.navbar-inverse .navbar-inner {
    background: rgba(0,0,0,0.4);
 }
@@ -20,10 +29,20 @@ body {
    #city-submit { display: none }
 }
 
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 767px) {
    iframe { 
    	height: 250px;
     margin-top: 30px; 
+	}
+	.navbar-brand {
+		display: none;
+	}
+	.col-sm-9 {
+		position: inherit;
+		margin-top: 53px;
+	}
+	.col-sm-3 {
+		margin-top: -76px;
 	}
 }
 
@@ -358,7 +377,6 @@ hr {
 
  .playlist-column {
  	height: 100%;
- 	margin-top: -4%;
  }
 
 
@@ -382,7 +400,8 @@ hr {
  }
 
  iframe {
- 	position: fixed;
+ 	position: absolute;
+ 	padding-right: 6%;
  }
 
 
@@ -400,6 +419,7 @@ hr {
  	margin-top: 10px;
  	font-weight: 900;
     font-size: larger;
+    padding-top: 10px;
  }
 
  .artist-vanue {
